# Flight-simulator-interpreter

./: BinaryExpression.h  BoolExpression.cpp  BoolExpression.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  Command.h  CommandReader.cpp  CommandReader.h  ConditionCommand.cpp  ConditionCommand.h  ConditionOperators.cpp  ConditionOperators.h  ConnectCommand.cpp  ConnectCommand.h  Data.cpp  Data.h  DataReaderServer.cpp  DefineVarCommand.cpp  DefineVarCommand.h  Div.cpp  Div.h  Enterc.cpp  Enterc.h  EqualCommand.cpp  EqualCommand.h  Expression.h  ExpressionCommand.cpp  ExpressionCommand.h  GetCommandMap.cpp  GetCommandMap.h  IfCommand.cpp  IfCommand.h  Minus.cpp  Minus.h  Mult.cpp  Mult.h  Num.cpp  Num.h  OpenDataServerCommand.cpp  (+23 more)
